--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-
+@font-face {
+    font-family: "dagsen";
+    src: url(Dagsen_Black.otf) format('opentype'),
+         url(Dagsen_Black.ttf) format('truetype');
+}
 
 @font-face {
     font-family: "morganite";
