--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ body:hover {
     position: absolute;
     left: 1%;
     bottom: 1%;
-    font-family: 'dagsen';
+    font-family: "dagsen";
     border-color: rgba(60, 60, 62, 0);
     transition: font-size 0.2s;
     
